--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
@@ -2,27 +2,27 @@
 
 
 
-    <div class="unit_card">
-        {% comment %}
-        <div class="unit_status in-progress-status">
-            In-progress
-        </div>
-        {% endcomment %}
-                {% if first_arg and second_arg and third_arg %}
-            <a href="{% url url_name first_arg second_arg third_arg %}{{search_url_text|safe}}">
-          {% elif first_arg and second_arg %}
-            <a href="{% url url_name first_arg second_arg %}{{search_url_text|safe}}">
-          {% elif first_arg %}
-            <a href='{% url url_name first_arg %}{{search_url_text|safe}}'>
-          {% endif %}
+            <div class="unit_card">
+                {% comment %}
+                <div class="unit_status in-progress-status">
+                    In-progress
+                </div>
+                {% endcomment %}
+                        {% if first_arg and second_arg and third_arg %}
+                    <a href="{% url url_name first_arg second_arg third_arg %}{{search_url_text|safe}}"/>
+                  {% elif first_arg and second_arg %}
+                    <a href="{% url url_name first_arg second_arg %}{{search_url_text|safe}}"/>
+                  {% elif first_arg %}
+                    <a href='{% url url_name first_arg %}{{search_url_text|safe}}'/>
+                  {% endif %}
 
-                <div class="unit_header">
-                    <img class="unit_banner" src="/static/ndf/images/module_banner.png"/>
-                    <span class="unit_title">{{node.name}}</span>
-                </div>
-                <div class="unit_desc">
-                {{node.content}}
-                </div>
+                        <div class="unit_header">
+                            <img class="unit_banner" src="/static/ndf/images/module_banner.png"/>
+                            <span class="unit_title">{{node.name}}</span>
+                        </div>
+                        <div class="unit_desc">
+                        {{node.content}}
+                        </div>
         {% comment %}
         
         <div class="unit_breif">
@@ -41,10 +41,10 @@
         </div>
         {% endcomment %}
 
-        <div class="unit_actions">
-            <a href="#" class="text-button-blue">
-                <span>Continue</span>
-            </a>
-        </div>
-    
-</div>
+                <div class="unit_actions">
+                    <a href="#" class="text-button-blue">
+                        <span>Continue</span>
+                    </a>
+                </div>
+            </div>
+     
