--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -3653,3 +3653,128 @@ ul.nav_menu_1 li:hover {
 .activity-slides-container .activity-slides #related-content .related-content-body {
   display: none;
 }
+
+/**
+ * Sass styles related to module cards
+ */
+/* line 3835, ../../../scss/_clix2017.scss */
+.module_card {
+  display: table;
+  height: 250px;
+  cursor: pointer;
+  margin: 10px;
+  border-radius: 5px;
+  position: relative;
+}
+/* line 3844, ../../../scss/_clix2017.scss */
+.module_card:hover {
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+}
+/* line 3848, ../../../scss/_clix2017.scss */
+.module_card > div {
+  display: table-cell;
+  height: 290px;
+}
+/* line 3852, ../../../scss/_clix2017.scss */
+.module_card .card_banner {
+  width: 300px;
+  vertical-align: middle;
+  overflow: hidden;
+  background-size: 100% 100%;
+  border-radius: 8px 0px 0px 8px;
+  box-shadow: inset 0 0 5px 2px;
+  background-image: url("/static/ndf/images/module_banner.png");
+  position: relative;
+  z-index: 3;
+  -webkit-transition: border-radius .2s;
+  transition: border-radius .2s;
+}
+/* line 3866, ../../../scss/_clix2017.scss */
+.module_card .card_title {
+  display: block;
+  width: 230px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0px auto;
+  letter-spacing: 1px;
+}
+/* line 3878, ../../../scss/_clix2017.scss */
+.module_card.animated_card .card_banner {
+  border-radius: 8px;
+}
+/* line 3881, ../../../scss/_clix2017.scss */
+.module_card.animated_card:hover .card_banner {
+  border-radius: 8px 0px 0px 8px;
+}
+/* line 3886, ../../../scss/_clix2017.scss */
+.module_card.animated_card.isOpen .card_banner {
+  border-radius: 8px 0px 0px 8px;
+}
+/* line 3890, ../../../scss/_clix2017.scss */
+.module_card.animated_card:hover .card_summary {
+  left: 30px;
+}
+/* line 3893, ../../../scss/_clix2017.scss */
+.module_card.animated_card .card_summary {
+  left: 5px;
+}
+/* line 3897, ../../../scss/_clix2017.scss */
+.module_card .card_summary {
+  width: 290px;
+  padding: 0px 15px;
+  vertical-align: middle;
+  border-style: solid;
+  border-width: 1px 1px 1px 0px;
+  border-radius: 0px 7px 7px 0px;
+  border-color: #d5d5d5;
+  box-shadow: inset 6px 0px 13px -5px;
+  -webkit-transition: left .4s ease-in-out;
+  transition: left .4s ease-in-out;
+  -webkit-transition-property: left;
+  /* Safari */
+  transition-property: left;
+}
+/* line 3911, ../../../scss/_clix2017.scss */
+.module_card .card_summary .card_label {
+  font-weight: 600;
+  font-size: 12.5px;
+  letter-spacing: 1px;
+}
+/* line 3916, ../../../scss/_clix2017.scss */
+.module_card .card_summary .card_section {
+  margin: 5px 0px;
+  padding: 5px 0px;
+}
+/* line 3920, ../../../scss/_clix2017.scss */
+.module_card .card_summary .card_section:not(:last-child) {
+  border-bottom: 1px solid #ccc;
+}
+/* line 3923, ../../../scss/_clix2017.scss */
+.module_card .card_summary .card_section p {
+  margin-bottom: 7px;
+  font-size: 12.5px;
+}
+/* line 3927, ../../../scss/_clix2017.scss */
+.module_card .card_summary .card_section .ellipsis {
+  width: 245px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+/* line 3935, ../../../scss/_clix2017.scss */
+.module_card .card_summary .module_brief {
+  display: block;
+  /* Fallback for non-webkit */
+  display: -webkit-box;
+  height: 52.5px;
+  /* Fallback for non-webkit */
+  max-width: 400px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 12.5px;
+  line-height: 1.4;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
