--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -3825,4 +3825,125 @@ $inCompleteBgColor: #fd9e29;
 
     }
   }
+/**
+ * Sass styles related to module cards
+ */
+$module-card-font-size: 12.5px;
+$module-card-line-height: 1.4;
+$module-card-lines-to-show: 3;
+
+.module_card {
+    display: table;
+    height: 250px;
+    // width: 630px;
+    cursor: pointer;
+    margin: 10px;
+    border-radius: 5px;
+    position: relative;
+
+    &:hover {
+        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    &>div {
+        display: table-cell;
+        height: 290px;
+    }
+    .card_banner {
+        width: 300px;
+        vertical-align: middle;
+        overflow: hidden;
+        background-size: 100% 100%;
+        border-radius: 8px 0px 0px 8px;
+        box-shadow: inset 0 0 5px 2px;
+        background-image: url('/static/ndf/images/module_banner.png');
+        position: relative;
+        z-index: 3;
+        -webkit-transition: border-radius .2s;
+        transition: border-radius .2s;
+
+    }
+    .card_title {
+        display: block;
+        width: 230px;
+        color: #fff;
+        font-size: 20px;
+        font-weight: 600;
+        text-align: center;
+        margin: 0px auto;
+        letter-spacing: 1px;
+    }
+
+    &.animated_card {
+        .card_banner {
+            border-radius: 8px;
+        }
+        &:hover .card_banner{
+            border-radius: 8px 0px 0px 8px;
+        }
+    }
+    &.animated_card.isOpen {
+        .card_banner {
+            border-radius: 8px 0px 0px 8px;
+        }
+    }
+    &.animated_card:hover .card_summary {
+        left: 30px;
+    }
+    &.animated_card .card_summary {
+        left: 5px;
+    }
+
+    .card_summary{
+        width: 290px;
+        padding: 0px 15px;
+        vertical-align: middle;
+        border-style: solid;
+        border-width: 1px 1px 1px 0px;
+        border-radius: 0px 7px 7px 0px;
+        border-color: #d5d5d5;
+        box-shadow: inset 6px 0px 13px -5px;
+        -webkit-transition: left .4s ease-in-out;
+        transition: left .4s ease-in-out;
+        -webkit-transition-property: left; /* Safari */
+        transition-property: left;
+
+        .card_label {
+            font-weight: 600;
+            font-size: $module-card-font-size;
+            letter-spacing: 1px;
+        }
+        .card_section {
+            margin: 5px 0px;
+            padding: 5px 0px;
+
+            &:not(:last-child) {
+                border-bottom: 1px solid #ccc;
+            }
+            p {
+                margin-bottom: 7px;
+                font-size: $module-card-font-size;
+            }
+            .ellipsis {
+                width: 245px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+        }
+
+        .module_brief {
+            display: block; /* Fallback for non-webkit */
+            display: -webkit-box;
+            height: $module-card-font-size*$module-card-line-height*$module-card-lines-to-show; /* Fallback for non-webkit */
+            max-width: 400px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            font-size: $module-card-font-size;
+            line-height: $module-card-line-height;
+            -webkit-line-clamp: $module-card-lines-to-show;
+            -webkit-box-orient: vertical;
+        }
+    }
+}
 
