Since, announcement will happen from basecourse or baseunit, get-param of course-id not needed, can use group_id

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -43,7 +43,7 @@
                             </div>
                         </li>
                         <li>
-                            <a href="{% url 'create_event_group' group_id 'CourseEventGroup' %}?cnode_id={{group_id}}" class="fi-volume"> Announce</a>
+                            <a href="{% url 'create_event_group' group_id 'CourseEventGroup' %}" class="fi-volume"> Announce</a>
                         </li>
 
                         {% get_lessons group_object as lessons_list %}
