--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -25,14 +25,15 @@
                         <div class="left header-left activity-name-label">
                             <span class="activity-name"><!-- Activity Name --></span>
                         </div>
-
+                    <a class="view-admin-page right" data-current-activity-id="" > View Teacher's page</a>
+                    <a class="view-help-page right" data-current-activity-id="" > View Help page</a>
+                    <a class="save_edit_activity right" data-current-activity-id="" > Edit </a>
                     <span data-dropdown="activity-settings-drop" aria-controls="activity-settings-drop" aria-expanded="false" class="large orange-button right">
                         Actions <i class="fa fa-chevron-down"></i>
                     </span>
                     <ul id="activity-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
-                        <li><a class="save_edit_activity" data-current-activity-id="" > Edit </a></li>
-                        <li><a class="view-admin-page" data-current-activity-id="" > View Teacher's page</a></li>
-                        <li><a class="view-help-page" data-current-activity-id="" > View Help page</a></li>
+                        <li></li>
+                        
                     </ul>
                         <!-- commenting following as activities now will be created/edited
                         from activity area -->
