--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
@@ -3,18 +3,18 @@
 @import '/static/ndf/bower_components/videojs/dist/video.min.js';
 @import '/static/ndf/bower_components/videojs/dist/video-js.min.css';
 @import '/static/ndf/css/videojs-skin-color.css';
-@import '/static/ndf/css/rubik-fonts.css';
+@import '/static/ndf/css/opensans-fonts.css';
 @import '/static/ndf/css/sgc-toc.css';
 
 #scstyle body{
 
-  font-family: 'Rubik', sans-serif;
+  font-family: 'OpenSans', sans-serif;
   font-weight: normal;
   font-size: 1em;
 }
 
 #scstyle h1, h2, h4,  h6 {
-  font-family: 'Rubik-Light', sans-serif;
+  font-family: 'OpenSans-Light', sans-serif;
   font-weight: normal;
   color: #4a4a4a !important;
   color: var(--greyish-brown);
@@ -44,7 +44,7 @@
 
 #scstyle h1 {
   margin-top: 3px;
-  font-family: 'Rubik-Medium', sans-serif;
+  font-family: 'OpenSans-Regular', sans-serif;
   font-size: 2.5rem;
   letter-spacing: -1.2px;
   color: #a61680 !important;
@@ -73,21 +73,21 @@
 
 #scstyle h5 {
   margin: 18px 0 5px;
-  font-family: 'Rubik-Medium', sans-serif;
+  font-family: 'OpenSans-Bold', sans-serif;
   font-size: 1.1rem;
   letter-spacing: -0.5px;
 }
 
 #scstyle h6 {
   margin: 18px 0 5px;
-  font-family: 'Rubik-Medium', sans-serif;
+  font-family: 'OpenSans-Bold', sans-serif;
   font-size: 1rem;
   letter-spacing: -0.4px;
 }
 
 #scstyle p {
   margin: 5px 0 10px;
-  font-family: 'Rubik-Regular', sans-serif;
+  font-family: 'OpenSans-Regular', sans-serif;
   font-size: .875em;
   line-height: 1.4;
   color: #000000;
@@ -96,7 +96,7 @@
 #scstyle li {
   margin: .5rem 1.15rem 0;
   padding-left: 3px;
-  font-family: 'Rubik-Regular', sans-serif;
+  font-family: 'OpenSans-Regular', sans-serif;
   font-size: .875em;
   line-height: 1.35;
   color: #000000;
@@ -114,12 +114,12 @@
 
 
 #scstyle strong {
-  font-family: 'Rubik-Bold', sans-serif;
+  font-family: 'OpenSans-Bold', sans-serif;
   color: #000000;
 }
 
 #scstyle em {
-  font-family: 'Rubik-Italic', sans-serif;
+  font-family: 'OpenSans-Italic', sans-serif;
   color: #000000;
 }
 
@@ -147,7 +147,7 @@
 }
 
 #scstyle small {
-  font-family: 'Rubik-Regular',sans-serif;
+  font-family: 'OpenSans-Regular',sans-serif;
   font-size: .75em;
   letter-spacing: 1.1px;
   text-transform: uppercase;
@@ -158,7 +158,7 @@
 #scstyle blockquote{
   margin: 1.5em auto;
   padding: .65em;
-  font-family: 'Rubik-Light',sans-serif;
+  font-family: 'OpenSans-Light',sans-serif;
   font-size: 1.25rem;
   line-height: 1.3;
   letter-spacing: -0.2px;
@@ -180,7 +180,7 @@
 }
 
 #scstyle ul.callout li {
-  font-family: 'Rubik-Light',sans-serif;
+  font-family: 'OpenSans-Light',sans-serif;
   font-size: 1.1em;
   line-height: 1.2;
   letter-spacing: -0.2px;
