--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/get_info_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/get_info_pages.html
@@ -1,18 +1,12 @@
 {% load i18n %}
 {% load ndf_tags %}
-<div class="activity-slides-container" >
-        {# <i class="fa fa-graduation-cap large"></i> #}
+<div class="activity-slides-container row" >
       {% get_help_pages_of_node node page_type as help_page_list %}
-
-      <div class="small-12-columns activity-slides">
+      <div class="columns small-12 activity-slides">
           {% if help_page_list %}
           {% for each_help_page in help_page_list %}
           <div id="related-content">
-            {% if page_type == "has_admin_page" %}<i class="icon-color fa fa-graduation-cap"></i>
-                
-              {% elif  page_type == "has_help" %} <i class="icon-color fa fa-info-circle" ></i>
-                
-              {% endif %}
+            <i class="fa fa-info-circle"></i>
             <div class="related-content-header">
               <span>Related {% if page_type == "has_admin_page" %}Teacher's Page {% elif  page_type == "has_help" %}
               Help Topic {% endif %}
@@ -21,7 +15,6 @@
                   <i class="fa fa-caret-right"></i>&nbsp;{{each_help_page.name}}
                   <div class="related-content-close">&times;</div>
                 </span>
-                
               </div>
               <div class="related-content-body">
               {{each_help_page.content|safe}}
