--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -22,20 +22,15 @@
                 <div class="activity-editor hide">
                     <!-- Right panel Header -->
                     <div class="actvity-editor-header editor-header" id="actvity-editor-headerid">
-                        <div class="left header-left activity-name-label">
+                        <div class="left header-left activity-name-label row">
                             <span class="activity-name"><!-- Activity Name --></span>
                         </div>
-                    <a class="view-admin-page right" data-current-activity-id="" > View Teacher's page</a>
-                    <a class="view-help-page right" data-current-activity-id="" > View Help page</a>
-                    <a class="save_edit_activity right" data-current-activity-id="" > Edit </a>
-                    <span data-dropdown="activity-settings-drop" aria-controls="activity-settings-drop" aria-expanded="false" class="large orange-button right">
-                        Actions <i class="fa fa-chevron-down"></i>
-                    </span>
-                    <ul id="activity-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
-                        <li></li>
-                        
-                    </ul>
-                        <!-- commenting following as activities now will be created/edited
+                    <div class="row">
+                        <a class="view-admin-page right orange-button-template" data-current-activity-id="" > View Teacher's page</a>
+                        <a class="view-help-page right orange-button-template" data-current-activity-id="" > View Help page</a>
+                        <a style="margin-top:10px!important" class="save_edit_activity right orange-button-template" data-current-activity-id="" > Edit </a>
+                    </div>   
+                     <!-- commenting following as activities now will be created/edited
                         from activity area -->
                         <!--
                         <div class="right custom_dropdown">
