--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_secondary_header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_secondary_header.html
@@ -6,22 +6,22 @@
 			<div class=" left title-area">
 
 				<a href="{% url 'explore_courses' %}" class="secondary-header-tabs  {%if title == 'courses'%} active{% endif %}">
-					Course Unit
+					Unit
 				</a>
 
 				<a href="{% url 'explore_groups' %}" class="secondary-header-tabs {%if title == 'groups'%} active{% endif %}">
 					Groups
 				</a>
 
-				<a href="{% url 'explore_modules' group_id %}" class="secondary-header-tabs {%if title == 'Module' %} active{% endif %}">
+				<a href="{% url 'explore_modules' group_id %}" class="secondary-header-tabs {%if title == 'Modules' %} active{% endif %}">
 					Modules
 				</a>
 
 				<a href="{% url 'explore_basecourses' %}" class="secondary-header-tabs {%if title == 'base courses'%} active{% endif %}">
-					Draft Course Unit
+					Draft Unit
 				</a>
 
-				<a class="secondary-header-button right" style="float:right" href="{% url 'unit_create_edit' group_id %}"><i class="fa fa-plus-circle"></i>{% trans " Create Course Unit" %}</a>
+				<a class="secondary-header-button right" style="float:right" href="{% url 'unit_create_edit' group_id %}"><i class="fa fa-plus-circle"></i>{% trans " Create Unit" %}</a>
 
 				<a class="secondary-header-button right" style="float:right" href="{% url 'module_create' group_id %}"><i class="fa fa-plus-circle"></i>{% trans " Create Module" %}</a>
 
