--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
@@ -18,7 +18,7 @@
     <div class="card_summary">
         <div class="card_section">
             <p class="module_brief">
-                {{node.content}}}
+                {{node.content}}
             </p>
         </div>
         <div class="card_section">
