UI changes in forms

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -12,8 +12,8 @@
                 <h5>Name</h5>
                 <div class="gray-text">{{source_obj.name}}</div>
                 </div>
-                <div class="right">
-                    <input name="name" type="text" class="orange-button" placeholder="Enter Name"
+                <div class="small-11 medium-11 large-11 columns">
+                    <input name="name" type="text" class="orange-button" style="margin-top:11px;margin-left:40px" placeholder="Enter Name"
                     value="{{node_obj.name|safe}}"/>
                 </div>
             </div>
