--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -2307,7 +2307,7 @@ ul.jqtree-tree .jqtree-toggler {
     box-shadow: 0px 2px 3px #000;
     margin: 10px auto;
     padding: 10px;
-    height: calc(150vh - 100px);
+    //height: calc(150vh - 100px);
 }
 
 .button-hollow-black{
