Font: OpenSans Reflected

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
@@ -693,7 +693,7 @@
   border-style: solid;
   border-width: 0px;
   cursor: pointer;
-  font-family: 'Rubik-Light', sans-serif;
+  font-family: 'OpenSans-Light', sans-serif;
   font-weight: normal;
   line-height: normal;
   margin: 0 0 1.25rem;
